@@ -1,3 +1,8 @@
+2007-07-24:
+	* src/minikafs.c: factor the v5- and v4-specific bits of settoken()
+	out into a single function, and allocate the buffer from the heap
+	rather than dynamically-sizing it based on the function's arguments.
+
 2007-07-20:
 	* src/v5.c: get v5_check_initialized_pwc() working on Heimdal.
 	* src/pam_krb5_storetmp.c: silence a compiler warning comparing the
